[tool.poetry]
name = "calculator"
version = "1.0.0"
description = "Awesome calculator for engineering and basic calculations by skaigroove"
authors = ["skaigroove"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
